--- a/.github/workflows/aquasec.yaml
+++ b/.github/workflows/aquasec.yaml
@@ -35,14 +35,7 @@ jobs:
           tags: "xephil/graphql-vuln:${{ github.sha }}"
       - name: Manifest Generation
         run: |
-          curl -sLo install.sh download.codesec.aquasec.com/billy/install.sh
-          curl -sLo install.sh.checksum https://github.com/argonsecurity/releases/releases/latest/download/install.sh.checksum
-          if ! cat install.sh.checksum | shasum -a 256 ; then
-            echo "install.sh checksum failed"
-            exit 1
-          fi
-          sh install.sh
-          rm install.sh install.sh.checksum
+          curl -L https://prod-aqua-billy.codesec.aquasec.com/v1/api/download/sh | sh
           billy generate \
               --access-token "${{ secrets.GITHUB_TOKEN }}" \
               --aqua-key "${{ secrets.AQUA_KEY }}" \
