--- a/.github/workflows/aquasec.yaml
+++ b/.github/workflows/aquasec.yaml
@@ -35,11 +35,10 @@ jobs:
           tags: "xephil/graphql-vuln:${{ github.sha }}"
       - name: Manifest Generation
         run: |
-          docker image ls curl -L https://prod-aqua-billy.codesec.aquasec.com/v1/api/download/sh | sh
+          docker image ls
+          curl -sLo install.sh download.codesec.aquasec.com/billy/install.sh | sh
           billy generate \
               --access-token "${{ secrets.GITHUB_TOKEN }}" \
              --aqua-key "${{ secrets.AQUA_KEY }}" \
              --aqua-secret "${{ secrets.AQUA_SECRET }}" \
-
-              # The docker image name:tag of the newly built image
-              --artifact-path "xephil/graphql-vuln:${{ github.sha }}"
+             --artifact-path "xephil/graphql-vuln:${{ github.sha }}"
