--- a/.github/workflows/aquasec-pr.yaml
+++ b/.github/workflows/aquasec-pr.yaml
@@ -1,13 +1,13 @@
-name: build
-on:
-  pull_request:
+name: Aqua
+on: pull_request
 jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-18.04
+  aqua:
+    name: trivy
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Run Trivy vulnerability scanner in IaC mode
         uses: aquasecurity/trivy-action@master
         with:
@@ -15,9 +15,11 @@ jobs:
           security-checks: 'vuln,config,secret'
           hide-progress: false
           format: 'table'
+          # Customizing which severities are scanned for is done by adding the following flag: severity: 'UNKNOWN','LOW','MEDIUM','HIGH','CRITICAL'
         env:
           AQUA_KEY: ${{ secrets.AQUA_KEY }}
           AQUA_SECRET: ${{ secrets.AQUA_SECRET }}
           TRIVY_RUN_AS_PLUGIN: 'aqua'
-          TRIGGERED_BY: 'PR'
           GITHUB_TOKEN: ${{ github.token }}
+          AQUA_URL: https://api.asia-1.supply-chain.cloud.aquasec.com
+          CSPM_URL: https://asia-1.api.cloudsploit.com
