--- a/.github/workflows/aquasec.yaml
+++ b/.github/workflows/aquasec.yaml
@@ -41,23 +41,12 @@ jobs:
             aquasec/aqua-scanner \
             trivy -d fs --scanners config,vuln,secret --sast --reachability . --format template -o aqua-code-scanner.html
         
-      # - name: Run Aqua Code Scanner
-      #   uses: docker://aquasec/aqua-scanner
-      #   with:
-      #     args: trivy -d fs --scanners config,vuln,secret . --sast --reachability
-      #     # To customize which severities to scan for, add the following flag: --severity UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL
-      #     # To enable SAST scanning, add: --sast
-      #     # To enable reachability scanning, add: --reachability
-      #     # To enable npm/dotnet/gradle non-lock file scanning, add: --package-json / --dotnet-proj / --gradle
-      #   env:
-      #     AQUA_KEY: ${{ secrets.AQUA_KEY }}
-      #     AQUA_SECRET: ${{ secrets.AQUA_SECRET }}
-      #     GITHUB_TOKEN: ${{ github.token }}
-      #     AQUA_URL: https://api.asia-1.supply-chain.cloud.aquasec.com
-      #     CSPM_URL: https://asia-1.api.cloudsploit.com
-      #     TRIVY_RUN_AS_PLUGIN: 'aqua'
-      #     # For http/https proxy configuration add env vars: HTTP_PROXY/HTTPS_PROXY, CA-CRET (path to CA certificate)
-
+      - name: Upload Aqua Code Scanner Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: aqua-artifact
+          path: aqua-code-scanner.*
+          
       - name: Manifest Generation (SBOM)
         run: |
           export BILLY_SERVER=https://billy.asia-1.codesec.aquasec.com
@@ -93,8 +82,14 @@ jobs:
         run: |
           docker login registry.aquasec.com -u $AQUA_USER -p $AQUA_PASSWORD
           docker pull registry.aquasec.com/scanner:2406.10.19 
-          docker run --rm -v $GITHUB_WORKSPACE:/tmp -v /var/run/docker.sock:/var/run/docker.sock -e BUILD_NUMBER=$BUILD_NUMBER -e BUILD_JOB_NAME=$BUILD_NAME registry.aquasec.com/scanner:2404.30.6 scan -w /tmp --host $AQUA_HOST --token $AQUA_TOKEN --show-negligible --local $DOCKER_REGISTRY/$DOCKER_REPOSITORY:$IMAGE_TAG --register-compliant --registry "Docker Hub" --htmlfile /tmp/out.html --jsonfile /tmp/out.json > /dev/null
-          
+          docker run --rm -v $GITHUB_WORKSPACE:/tmp -v /var/run/docker.sock:/var/run/docker.sock -e BUILD_NUMBER=$BUILD_NUMBER -e BUILD_JOB_NAME=$BUILD_NAME registry.aquasec.com/scanner:2404.30.6 scan -w /tmp --host $AQUA_HOST --token $AQUA_TOKEN --show-negligible --local $DOCKER_REGISTRY/$DOCKER_REPOSITORY:$IMAGE_TAG --register-compliant --registry "Docker Hub" --htmlfile /tmp/aqua-image-scanner.html --jsonfile /tmp/aqua-image-scanner.json > /dev/null
+
+      - name: Upload Aqua Image Scanner Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: aqua-artifact
+          path: aqua-image-scanner.*
+         
       - name: Manifest Generation (SBOM)
         run: |
           export BILLY_SERVER=https://billy.asia-1.codesec.aquasec.com
