--- a/.github/workflows/aquasec.yaml
+++ b/.github/workflows/aquasec.yaml
@@ -48,7 +48,7 @@ jobs:
             -e TRIVY_RUN_AS_PLUGIN='aqua' \
             -e INPUT_WORKING_DIRECTORY=/scanning \
             aquasec/aqua-scanner \
-            trivy -d fs --scanners config,vuln,secret --sast --reachability . --format template -o aqua-code-scanner.html
+            trivy fs --scanners misconfig,vuln,secret --sast --reachability . --format template -o aqua-code-scanner.html
         
       - name: Upload Aqua Code Scanner Results as Artifact
         uses: actions/upload-artifact@v4
@@ -82,15 +82,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Setup Aqua Pipeline Enforcer
-        uses: aquasecurity/pipeline-enforcer-action@main
-        env:
-          CSPM_URL: https://asia-1.api.cloudsploit.com
-          AQUA_URL: https://api.asia-1.supply-chain.cloud.aquasec.com
-        with:
-          aqua-key: ${{ secrets.AQUA_KEY }}
-          aqua-secret: ${{ secrets.AQUA_SECRET }}
         
       - name: Build Image Locally
         run: |
