--- a/.github/workflows/aquasec.yaml
+++ b/.github/workflows/aquasec.yaml
@@ -34,21 +34,41 @@ jobs:
         with:
           aqua-key: ${{ secrets.AQUA_KEY }}
           aqua-secret: ${{ secrets.AQUA_SECRET }}
-
+          
       - name: Run Aqua Code Scanner
-        run: |
-          docker pull aquasec/aqua-scanner
-          docker run \
-            -v ${{ github.workspace }}:/scanning \
-            -e AQUA_KEY=${{ secrets.AQUA_KEY }} \
-            -e AQUA_SECRET=${{ secrets.AQUA_SECRET }} \
-            -e GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} \
-            -e AQUA_URL=https://api.asia-1.supply-chain.cloud.aquasec.com \
-            -e CSPM_URL=https://asia-1.api.cloudsploit.com \
-            -e TRIVY_RUN_AS_PLUGIN='aqua' \
-            -e INPUT_WORKING_DIRECTORY=/scanning \
-            aquasec/aqua-scanner \
-            trivy fs --scanners misconfig,vuln,secret --sast --reachability . --format template -o aqua-code-scanner.html
+        uses: docker://aquasec/aqua-scanner
+        with:
+          args: trivy fs --scanners misconfig,vuln,secret . --sast --reachability --format template -o aqua-code-scanner.html
+          # To customize which severities to scan for, add the following flag: --severity UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL
+          # To enable SAST scanning, add: --sast
+          # To enable reachability scanning, add: --reachability
+          # To enable npm/dotnet/gradle non-lock file scanning, add: --package-json / --dotnet-proj / --gradle
+        env:
+          AQUA_KEY: ${{ secrets.AQUA_KEY }}
+          AQUA_SECRET: ${{ secrets.AQUA_SECRET }}
+          GITHUB_TOKEN: ${{ github.token }}
+          AQUA_URL: https://api.asia-1.supply-chain.cloud.aquasec.com
+          CSPM_URL: https://asia-1.api.cloudsploit.com
+          TRIVY_RUN_AS_PLUGIN: 'aqua'
+          INPUT_WORKING_DIRECTORY: '/scanning'
+          # For http/https proxy configuration add env vars: HTTP_PROXY/HTTPS_PROXY, CA-CRET (path to CA certificate)
+     
+      # - name: Run Aqua Code Scanner
+      #   run: |
+      #     docker pull aquasec/aqua-scanner
+      #     docker run \
+      #       -v ${{ github.workspace }}:/scanning \
+      #       -e AQUA_KEY=${{ secrets.AQUA_KEY }} \
+      #       -e AQUA_SECRET=${{ secrets.AQUA_SECRET }} \
+      #       -e GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} \
+      #       -e AQUA_URL=https://api.asia-1.supply-chain.cloud.aquasec.com \
+      #       -e CSPM_URL=https://asia-1.api.cloudsploit.com \
+      #       -e TRIVY_RUN_AS_PLUGIN='aqua' \
+      #       -e INPUT_WORKING_DIRECTORY=/scanning \
+      #       -e OVERRIDE_BUILDSYSTEM='GitHub Actions' \
+      #       -e OVERRIDE_REPOSITORY_SOURCE='GitHub'
+      #       aquasec/aqua-scanner \
+      #       trivy fs --scanners misconfig,vuln,secret --sast --reachability . --format template -o aqua-code-scanner.html
         
       - name: Upload Aqua Code Scanner Results as Artifact
         uses: actions/upload-artifact@v4
@@ -74,7 +94,13 @@ jobs:
             --cspm-url https://asia-1.api.cloudsploit.com \
             --artifact-path "${{ github.workspace }}"
 
-
+  image-scanning:
+    name: Aqua Image Scanner
+    runs-on: ubuntu-latest
+    environment: main
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
         
       - name: Build Image Locally
         run: |
