--- a/.github/workflows/aquasec.yaml
+++ b/.github/workflows/aquasec.yaml
@@ -8,7 +8,7 @@ env:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       DOCKER_REGISTRY: "stanhoe"
-      DOCKER_REPOSITORY: "graphql"
+      DOCKER_REPOSITORY: "graphql-bull"
       IMAGE_TAG: ${{ github.sha }}
       BUILD_NUMBER: ${{ github.run_id }}
       BUILD_NAME: ${{ github.repository }}
