--- a/.github/workflows/aquasec.yaml
+++ b/.github/workflows/aquasec.yaml
@@ -97,6 +97,7 @@ jobs:
 
       - name: Manifest Generation (SBOM) - Docker Tar File
         run: |
+          ls -la
           export BILLY_SERVER=https://billy.asia-1.codesec.aquasec.com
           curl -sLo install.sh download.codesec.aquasec.com/billy/install.sh
           curl -sLo install.sh.checksum https://github.com/argonsecurity/releases/releases/latest/download/install.sh.checksum
@@ -111,7 +112,7 @@ jobs:
             --aqua-key "${{ secrets.AQUA_KEY }}" \
             --aqua-secret "${{ secrets.AQUA_SECRET }}" \
             --cspm-url https://asia-1.api.cloudsploit.com \
-            --artifact-path "$GITHUB_WORKSPACE/$DOCKER_REPOSITORY.tar"
+            --artifact-path "$DOCKER_REPOSITORY.tar"
          
       - name: Manifest Generation (SBOM) - Docker Image 
         run: |
