--- a/.github/workflows/aquasec.yaml
+++ b/.github/workflows/aquasec.yaml
@@ -80,7 +80,7 @@ jobs:
       - name: Build Image Locally
         run: |
           docker build -t "$DOCKER_REGISTRY/$DOCKER_REPOSITORY:$IMAGE_TAG" .
-          docker save -o "$DOCKER_REPOSITORY.tar" "$DOCKER_REGISTRY/$DOCKER_REPOSITORY:$IMAGE_TAG"
+          docker save -o $GITHUB_WORKSPACE/DOCKER_REPOSITORY.tar" "$DOCKER_REGISTRY/$DOCKER_REPOSITORY:$IMAGE_TAG"
           ls -la
           
       - name: Run Aqua Image Scanner
@@ -112,7 +112,7 @@ jobs:
             --aqua-key "${{ secrets.AQUA_KEY }}" \
             --aqua-secret "${{ secrets.AQUA_SECRET }}" \
             --cspm-url https://asia-1.api.cloudsploit.com \
-            --artifact-path "$DOCKER_REPOSITORY.tar"
+            --artifact-path "$GITHUB_WORKSPACE/$DOCKER_REPOSITORY.tar"
          
       - name: Manifest Generation (SBOM) - Docker Image 
         run: |
