--- a/.github/workflows/aquasec.yaml
+++ b/.github/workflows/aquasec.yaml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-
+      
 env:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
@@ -18,8 +18,8 @@ env:
       AQUA_PASSWORD: ${{ secrets.AQUA_PASSWORD }} # Aqua Registry
 
 jobs:
-  aqua:
-    name: Aqua Shift Left Security
+  code-scanning:
+    name: Aqua Code Security
     runs-on: ubuntu-latest
     environment: main
     steps:
@@ -76,6 +76,15 @@ jobs:
             --aqua-secret "${{ secrets.AQUA_SECRET }}" \
             --cspm-url https://asia-1.api.cloudsploit.com \
             --artifact-path "${{ github.workspace }}"
+            
+  image-scanning:
+    name: Aqua Image Security
+    needs: code-scanning
+    runs-on: ubuntu-latest
+    environment: main
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
         
       - name: Build Image Locally
         run: |
